--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,7 +25,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "lint": "eslint --ext .tsx,.ts,.js,.jsx src"
+        "lint": "eslint --ext .tsx,.ts,.js,.jsx src --fix"
     },
     "eslintConfig": {
         "extends": [
